[gd_scene load_steps=14 format=3 uid="uid://bg5vq4wc07s0l"]

[ext_resource type="Script" path="res://scenes/spinning_star.gd" id="1_ebi52"]
[ext_resource type="Texture2D" uid="uid://dyh6mdlpow035" path="res://art/spinning_star.png" id="1_eifnl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ijetl"]
atlas = ExtResource("1_eifnl")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo20p"]
atlas = ExtResource("1_eifnl")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1628w"]
atlas = ExtResource("1_eifnl")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lihin"]
atlas = ExtResource("1_eifnl")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_msoh8"]
atlas = ExtResource("1_eifnl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dn1e"]
atlas = ExtResource("1_eifnl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhra7"]
atlas = ExtResource("1_eifnl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_825h8"]
atlas = ExtResource("1_eifnl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q3qfj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijetl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo20p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1628w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lihin")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msoh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dn1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhra7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_825h8")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xdruu"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6iy30"]
radius = 1.0

[node name="SpinningStar" type="Node2D"]
script = ExtResource("1_ebi52")

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q3qfj")
animation = &"death"
autoplay = "idle"

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_xdruu")

[node name="CollisionDetector" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_6iy30")
target_position = Vector2(2.5, 0)
